# player-tracking

./: README.md  homography.npz  pyproject.toml
etc/: my_player_dataset.py
outputs/: tracking.csv
player_mapping/src/: bytetrack.py  calibration.py  detection.py  main.py  ocr.py  tracker.py  tracking.py  utils.py  visualizer.py
train/: train.py
train/YOLOX_dataset/annotations/: instances_train.json  instances_val.json
train/YOLOX_dataset/images/train_new/: train_annotations.coco.json
train/YOLOX_dataset/images/val_new/: val_annotations.coco.json
